--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
   font-family: sans-serif;
 }
 body {
-    min-height: 100%;
-    background-image: url("background.jpg");
-    background-attachment: fixed;
+  min-height: 100%;
+  background-image: url("poze/background.jpg");
+  background-attachment: fixed;
 }
 html {
     height: auto;
@@ -29,8 +29,7 @@ html {
   top: 0;
   left: 0; 
   z-index: 9999;
-  margin-bottom: 1000px;
-  background-image: url(oferta.jpg);
+  background-image: url(poze/oferta.jpg);
   background-size: cover;
   width: 100%;
   padding: 35px 0;
@@ -108,7 +107,7 @@ html {
     background-color: #fff;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-    background-image: url(Livrare-pizza.jpg);
+    background-image: url(poze/Livrare-pizza.jpg);
     background-size: cover;
     font-size: 2.5em;
 }
@@ -176,22 +175,19 @@ h6{
 /*footer*/
 
 footer {
-  /* problema principala: "position: absolute" si "bottom: 0"
-  faceau footer-ul sa fie in partea de jos a ferestrei (ecranul vizibil initial)
-  */
-  /* position: absolute; */
-  /* bottom: 0; */
   width: 100%;
   background-color: #333;
   color: #fff;
   padding: 30px 0;
   text-align: center;
-  margin-top: 75%;
 }
 
 
 .container {
   position:relative;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .row {
@@ -201,6 +197,7 @@ footer {
 }
 
 .col-md-6 {
+  font-size: small;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -243,8 +240,8 @@ a:hover {
   color: black;
   position: absolute;
   width: 100%;
-  height: 30%;
-  top: 80%;
+  height: 20%;
+  top: 100%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -289,7 +286,7 @@ a:hover {
 }
 /* galerie*/
 .poze {
-  margin-top: 200px;
+  margin-top: 49px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
